# math

./: CMakeLists.txt
generator/: CMakeLists.txt  Program.cs  generator.cs  matrix.cs  scalar.cs  util.cs  vector.cs
test/: CMakeLists.txt  main.cpp
