
file(GLOB_RECURSE src
	${CMAKE_CURRENT_SOURCE_DIR}/*.cs)

add_executable(generator ${src})
set_target_properties(generator PROPERTIES 
	VS_DOTNET_REFERENCES "System;System.Net;System.Net.Http;System.XML;System.Xml.Linq"
	RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/../bin"
	RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/../bin"
	RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_BINARY_DIR}/../bin"
	RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "${CMAKE_BINARY_DIR}/../bin"
)
