
file(GLOB_RECURSE src
	${CMAKE_CURRENT_SOURCE_DIR}/*.h 
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp 
	${CMAKE_BINARY_DIR}/../bin/*.h 
	${CMAKE_BINARY_DIR}/../bin/*.cpp )

add_executable(test ${src})
target_include_directories(test PRIVATE ${CMAKE_BINARY_DIR}/../bin)
set_target_properties(test PROPERTIES 
	RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/../bin"
	RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/../bin"
	RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_BINARY_DIR}/../bin"
	RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "${CMAKE_BINARY_DIR}/../bin"
)
